# django-webdav

./: .gitignore  MANIFEST.in  README.md  README.org  README.rst  setup.cfg
demo/: .gitignore  app.jsx  docker-compose.yml  webdav.jsx
demo/backend/: react  webdav
demo/backend/backend/: settings.py  urls.py
webdav/: __init__.py  admin.py  apis.py  apps.py  client.py  filters.py  forms.py  models.py  package-lock.json  package.json  receivers.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py  vite.config.js
webdav/components/: ActivityBox.jsx  ActivityLine.jsx  BatchButton.jsx  CommentBox.jsx  CommentLine.jsx  CreateFolderButton.jsx  CreateFolderDialog.jsx  DavBody.jsx  DirectoryBreadcrumbs.jsx  DownloadMenu.jsx  FileActions.jsx  FileDeleteDialog.jsx  FileName.jsx  FilePreview.jsx  FileSummary.jsx  FilesTable.jsx  LeftPanel.jsx  Preview.jsx  README.md  RenameDialog.jsx  ShareBox.jsx  Sidebar.jsx  UploadButton.jsx  directory-context.jsx  utils.jsx  webdav.jsx
webdav/components/components/: BatchButton.jsx  CreateFolderButton.jsx  CreateFolderDialog.jsx  DavBody.jsx  DirectoryBreadcrumbs.jsx  DownloadMenu.jsx  FileActions.jsx  FileDeleteDialog.jsx  FileDeleteMenu.jsx  FileName.jsx  FileSummary.jsx  FilesTable.jsx  LeftPanel.jsx  Preview.jsx  RenameDialog.jsx  RenameMenu.jsx  Sidebar.jsx  Topbar.jsx  UploadButton.jsx
webdav/components/context/: batch.jsx  directory-context.jsx
webdav/migrations/: 0001_initial.py  0002_alter_sharelink_uuid.py  0003_alter_activity_action.py
webdav/templatetags/: dav_tags.py
(+4 files in other folders)
